인덱스 추가

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <header>
     <div class="inner">
       <div class="inner-top">
-        <a href="javascript:void(0)" class="sub-menu1">회원가입</a>
+        <a href="javascript:void(0)" class="sub-menu1">회원가입2</a>
         <a href="javascript:void(0)" class="sub-menu2">로그인</a>
         <a href="javascript:void(0)" class="sub-menu3">고객센터
           <img class="sub-menu-down" src="https://res.kurly.com/pc/ico/1908/ico_down_16x10.png" alt="">
