--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <a href="javascript:void(0)" class="purple">신상품</a>
           <a href="javascript:void(0)">베스트</a>
           <a href="javascript:void(0)">알뜰쇼핑</a>
-          <a href="javascript:void(0)">특가/혜택</a>
+          <a href="javascript:void(0)">특가/혜d택</a>
         </div>
       
     </div>
