메인 카테고리 정렬 변경
1. ul,li 속성으로 변경
2. div 부모 수정

--- a/index.html
+++ b/index.html
@@ -87,18 +87,16 @@
       <div class="inner">
         <div class="menu-category">
         <a href="javascript:void(0)" class="category">카테고리</a>
-        </div>
-        <div class="main-menu">
-          <a href="javascript:void(0)" class="purple">신상품</a>
-          <a href="javascript:void(0)">베스트</a>
-          <a href="javascript:void(0)">알뜰쇼핑</a>
-          <a href="javascript:void(0)">특가/혜d택</a>
-        </div>
+        <ul class="main-menu">
+          <li href="javascript:void(0)" class="purple">신상품</li>
+          <li href="javascript:void(0)">베스트</li>
+          <li href="javascript:void(0)">알뜰쇼핑</li>
+          <li href="javascript:void(0)">특가/혜d택</li>
+        </ul>
+      </div>
       
     </div>
     </nav>
-
-    
   </header>
   
 </body>
