메인 정렬 수정

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <header>
     <div class="inner">
       <div class="inner-top">
-        <a href="javascript:void(0)" class="sub-menu1">회원가입2</a>
+        <a href="javascript:void(0)" class="sub-menu1">회원가입</a>
         <a href="javascript:void(0)" class="sub-menu2">로그인</a>
         <a href="javascript:void(0)" class="sub-menu3">고객센터
           <img class="sub-menu-down" src="https://res.kurly.com/pc/ico/1908/ico_down_16x10.png" alt="">
@@ -87,15 +87,14 @@
       <div class="inner">
         <div class="menu-category">
         <a href="javascript:void(0)" class="category">카테고리</a>
+        </div>
         <ul class="main-menu">
-          <li href="javascript:void(0)" class="purple">신상품</li>
-          <li href="javascript:void(0)">베스트</li>
-          <li href="javascript:void(0)">알뜰쇼핑</li>
-          <li href="javascript:void(0)">특가/혜d택</li>
+          <li>신상품</li>
+          <li>베스트</li>
+          <li>알뜰쇼핑</li>
+          <li>특가/혜택</li>
         </ul>
       </div>
-      
-    </div>
     </nav>
   </header>
   
